# OOP-lab4

./: CMakeLists.txt
include/: figure.hpp  figure_vector.hpp  figure_vector.ipp  point.hpp  point.ipp  rectangle.hpp  rectangle.ipp  rhombus.hpp  rhombus.ipp  square.hpp  square.ipp  trapezoid.hpp  trapezoid.ipp
tests/: test_geometry.cpp
